# stm32util

./: .clang-format  .gitignore  README.md
.github/workflows/: ci.yml
ci/: test.sh
cmake/: common.cmake
include/stm32util/gpio/: GPIOUtil.hpp
include/stm32util/reg/: RegisterUtil.hpp
include/stm32util/time/: TimeUtil.hpp
test/: CMakeLists.txt
test/gpio/: GPIOUtilTest.cpp
test/reg/: RegisterUtilTest.cpp
